--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>index</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="public/sass/style.css">
 </head>
 <body>
-
+  <div class="content-header">
+    <header>
+      <div class="logo">
+        <a href="#">Jordan Nguyen</a>
+      </div>
+      <nav class="nav">
+        <ul>
+          <li><a href="#index">Accueil</a></li>
+          <li><a href="#aboutme">A propos de moi</a></li>
+          <li><a href="#skills">Compétences</a></li>
+          <li><a href="#curriculum">CV</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="nav-responsive">
+        <i class="fa-solid fa-bars-staggered"></i>
+      </div>
+    </header>
+  </div>
 </body>
 </html>
