--- a/index.html
+++ b/index.html
@@ -10,25 +10,434 @@
   <link rel="stylesheet" href="public/sass/style.css">
 </head>
 <body>
+<!-- Navbar -->
   <div class="content-header">
     <header>
       <div class="logo">
         <a href="#">Jordan Nguyen</a>
       </div>
-      <nav class="nav">
+      <nav id="nav">
         <ul>
-          <li><a href="#index">Accueil</a></li>
-          <li><a href="#aboutme">A propos de moi</a></li>
-          <li><a href="#skills">Compétences</a></li>
-          <li><a href="#curriculum">CV</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#index" onclick="select()">Accueil</a></li>
+          <li><a href="#aboutme" onclick="select()">A propos</a></li>
+          <li><a href="#skills" onclick="select()">Compétences</a></li>
+          <li><a href="#cv" onclick="select()">CV</a></li>
+          <li><a href="#portfolio" onclick="select()">Portfolio</a></li>
+          <li><a href="#contact" onclick="select()">Contact</a></li>
         </ul>
       </nav>
-      <div class="nav-responsive">
+      <div class="nav-responsive"  onclick="showHideMenu()">
         <i class="fa-solid fa-bars-staggered"></i>
       </div>
     </header>
   </div>
+  <!-- Section Index -->
+  <section id="index" class="index">
+    <div class="content-banner">
+      <div class="content-img">
+        <img src="public/img/profil.png" alt="">
+      </div>
+      <h1>Jordan Nguyen</h1>
+      <h2>Développeur Web Full-Stack</h2>
+      <div class="social-media">
+        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="#"><i class="fa-brands fa-github-alt"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+      </div>
+    </div>
+  </section>
+  <!-- Section About me -->
+  <section id="aboutme" class="aboutme">
+    <div class="content-section">
+      <div class="subheadline">Hello! It's nice to see you here!</div>
+      <h2>A propos de moi</h2>
+      <p><span>Je suis développeur web Full-Stack et j'aime ça</span><br>
+        Né à Marseille et élevé à Madrid,
+        suite à une reconversion professionnelle, je suis récemment diplômé en tant que développeur Web et web mobile.
+        Depuis, je conçois et développe des sites web, perfectionnant mes compétences pour tenir au courant de
+        l'évolution rapide de l'industrie du web.</p>
+      <div class="fil">
+        <div class="col">
+          <h3>Données personnelles</h3>
+          <ul>
+            <li>
+              <strong>Date de naissance</strong>
+              16-04-1989
+            </li>
+            <li>
+              <strong>Téléphone</strong>
+              (+33) 07 68 77 39 39
+            </li>
+            <li>
+              <strong>Email</strong>
+              nguyenjordan89@gmail.com
+            </li>
+            <li>
+              <strong>Adresse</strong>
+              21 Chemin du bray, Annecy
+            </li>
+            <li>
+              <strong>Langue</strong>
+              <span>Français</span> Bilangue
+              <span>Espagnole</span> Bilangue
+              <span>Anglais</span> B1
+            </li>
+          </ul>
+        </div>
+        <div class="col">
+          <h3>Centres d'intérêt</h3>
+          <div class="content-interest">
+            <div class="interest">
+              <i class="fa-solid fa-gamepad"></i>
+              <span>jeux-vidéo</span>
+            </div>
+            <div class="interest">
+              <i class="fa-solid fa-headphones-simple"></i>
+              <span>Music</span>
+            </div>
+            <div class="interest">
+              <i class="fa-solid fa-film"></i>
+              <span>Audiovisuel</span>
+            </div>
+            <div class="interest">
+              <i class="fa-solid fa-plane"></i>
+              <span>Voyager</span>
+            </div>
+            <div class="interest">
+              <i class="fa-solid fa-kitchen-set"></i>
+              <span>cuisiner</span>
+            </div>
+            <div class="interest">
+              <i class="fa-solid fa-person-hiking"></i>
+              <span>Randonnée</span>
+            </div>
+            <div class="interest">
+              <i class="fa-solid fa-dumbbell"></i>
+              <span>Crossfit</span>
+            </div>
+            <div class="interest">
+              <i class="fa-solid fa-book-bookmark"></i>
+              <span>Lire</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button>
+        Télécharger CV <i class="fa-solid fa-cloud-arrow-down"></i>
+        <span class="overlay"></span>
+      </button>
+    </div>
+  </section>
+  <!-- Section Skills -->
+  <section id="skills" class="skills">
+    <div class="content-section">
+      <h2>COMPETENCES</h2>
+      <div class="fil">
+        <div class="col">
+          <h3>Compétences techniques</h3>
+          <div class="skill">
+            <span>Javascript</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>75%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>HTML & CSS</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>90%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>PHP</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>85%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>CMS Wordpress</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>80%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>React.js</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>65%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>Framework Symfony 6</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>90%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>SQL (MySQL, PostgreSQL,MariaDB)</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>90%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>Github</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>90%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>Photoshop</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>85%</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <h3>Compétences professionnelles</h3>
+          <div class="skill">
+            <span>Communication</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>80%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>Travail en équipe</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>70%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>Créativité</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>85%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>Curieux sur différentes technologies</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>90%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>Travail indépendant</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>85%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>Rigoureux</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>80%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>Patient</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>90%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>Organisé</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>80%</span>
+              </div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>Polyvalent</span>
+            <div class="bar-progress">
+              <div class="progress">
+                <span>85%</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Section CV -->
+  <section id="cv" class="cv">
+    <div class="content-section">
+      <h2>CV</h2>
+      <div class="fil">
+        <div class="col left">
+          <h3>Diplôme et formations</h3>
+          <div class="item lef">
+            <h4>BTS Développeur Web et Web mobile</h4>
+            <span class="home">Studi</span><p> Paris</p>
+            <span class="date">Janvier 2023</span>
+            <div class="connectl">
+              <div class="circlel"></div>
+            </div>
+          </div>
+          <div class="item lef">
+            <h4>Diplôme de pâtisserie</h4>
+            <span class="home">Le Cordon Bleu</span><p> Paris</p>
+            <span class="date">Janvier 2023</span>
+            <div class="connectl">
+              <div class="circlel"></div>
+            </div>
+          </div>
+        </div>
+        <div class="col right">
+          <h3>Experience Professionnel</h3>
+          <div class="item rig">
+            <h4>Glacier</h4>
+            <span class="home">Palais des glaces</span><p> Annecy</p>
+            <span class="date">2020 - 2022</span>
+            <div class="connectr">
+              <div class="circler"></div>
+            </div>
+          </div>
+          <div class="item rig">
+            <h4>Pâtissier</h4>
+            <span class="home">La Réserve Hotel & Spa</span><p> Genève (Suisse)</p>
+            <span class="date">Mai 2019 à octobre 2019</span>
+            <div class="connectr">
+              <div class="circler"></div>
+            </div>
+          </div>
+          <div class="item rig">
+            <h4>Pâtissier</h4>
+            <span class="home">Cannelés Baillardran</span><p> Bordeaux</p>
+            <span class="date">2016 - 2019</span>
+            <div class="connectr">
+              <div class="circler"></div>
+            </div>
+          </div>
+          <div class="item rig">
+            <h4>Pâtissier</h4>
+            <span class="home">Faubourg Paris</span><p> Vancouver (Canada)</p>
+            <span class="date">2013 - 2016</span>
+            <div class="connectr">
+              <div class="circler"></div>
+            </div>
+          </div>
+          <div class="item rig">
+            <h4>Pâtissier</h4>
+            <span class="home">Mallorca Catering</span><p> Madrid (Espagne)</p>
+            <span class="date">2010 - 2011</span>
+            <div class="connectr">
+              <div class="circler"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Section Portfolio -->
+  <section id="portfolio" class="portfolio">
+    <div class="content-section">
+      <h2>PORTFOLIO</h2>
+      <div class="gallery">
+        <div class="project">
+          <img src="public/img/crossfitlife.png" alt="API Crossfit Life">
+          <div class="overlay">
+            <h3>API <br> Crossfit Life</h3>
+            <p>Symfony 6</p>
+          </div>
+        </div>
+        <div class="project">
+          <img src="public/img/Le_secret.png" alt="Restaurant Le Secret">
+          <div class="overlay">
+            <h3>Site statique <br> Restaurant Le Secret</h3>
+            <p>HTML,CSS & JS</p>
+          </div>
+        </div>
+        <div class="project">
+          <img src="public/img/MLD_cinema.png" alt="Base de données Salle de Cinéma">
+          <div class="overlay">
+            <h3>Base de données <br> Salle de Cinéma</h3>
+            <p>SQL</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Section Contact -->
+  <section id="contact" class="contact">
+    <div class="content-section">
+      <h2>CONTACT</h2>
+      <div class="fil">
+        <!-- Form -->
+        <div class="col">
+          <input type="text" name="firstname" placeholder="Prénom" required="required">
+          <input type="text" name="lastname"  placeholder="Nom" required="required">
+          <input type="text" name="number"  placeholder="Numéro de téléphone" required="required">
+          <input type="text" name="email"  placeholder="Votre email" required="required">
+          <input type="text" name="subject"  placeholder="Sujet" required="required">
+          <textarea name="message" id="message" cols="30" rows="10" placeholder="Message" required="required"></textarea>
+          <button type="submit">
+            Envoyer <i class="fa-solid fa-paper-plane"></i>
+            <span class="overlay"></span>
+          </button>
+        </div>
+        <!-- Map -->
+        <div class="col">
+          <img src="public/img/ubication.jpg" alt="">
+          <div class="info">
+            <ul>
+              <li>
+                <i class="fa-solid fa-location-dot"></i>
+                21 chemin du bray, Annecy
+              </li>
+              <li>
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                (+33) 0 768 77 39 39
+              </li>
+              <li>
+                <i class="fa-solid fa-envelope"></i>
+                Email: nguyenjordan89@gmail.com
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- footer -->
+  <footer>
+    <a href="#index" class="up">
+      <i class="fa-solid fa-angles-up"></i>
+    </a>
+    <div class="social-media">
+      <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="#"><i class="fa-brands fa-github-alt"></i></a>
+      <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+    </div>
+  </footer>
+
+<script src="public/js/script.js"></script>
 </body>
 </html>
