modify languages and date diploma

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <p><span>Je suis développeur web Full-Stack et j'aime ça</span><br>
         Né à Marseille et élevé à Madrid,
         suite à une reconversion professionnelle, je suis récemment diplômé en tant que développeur Web et web mobile.
-        Depuis, je conçois et développe des sites web, perfectionnant mes compétences pour tenir au courant de
+        Depuis, je conçois et développe des sites web en perfectionnant mes compétences pour me tenir au courant de
         l'évolution rapide de l'industrie du web.</p>
       <div class="fil">
         <div class="col">
@@ -78,8 +78,8 @@
             </li>
             <li>
               <strong>Langue</strong>
-              <span>Français</span> Bilangue
-              <span>Espagnole</span> Bilangue
+              <span>Français</span> Bilingue
+              <span>Espagnole</span> Bilingue
               <span>Anglais</span> B1
             </li>
           </ul>
@@ -304,7 +304,7 @@
           <div class="item lef">
             <h4>Diplôme de pâtisserie</h4>
             <span class="home">Le Cordon Bleu</span><p> Paris</p>
-            <span class="date">Janvier 2023</span>
+            <span class="date">Juin 2009</span>
             <div class="connectl">
               <div class="circlel"></div>
             </div>
