add cv download

--- a/index.html
+++ b/index.html
@@ -123,8 +123,10 @@
         </div>
       </div>
       <button>
-        Télécharger CV <i class="fa-solid fa-cloud-arrow-down"></i>
-        <span class="overlay"></span>
+        <a href="public/img/CV%20Jordan%20NGUYEN.pdf" download="CV Jordan NGUYEN">
+          Télécharger CV <i class="fa-solid fa-cloud-arrow-down"></i>
+          <span class="overlay"></span>
+        </a>
       </button>
     </div>
   </section>
