add link social

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <h1>Jordan Nguyen</h1>
       <h2>Développeur Web Full-Stack</h2>
       <div class="social-media">
-        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="#"><i class="fa-brands fa-github-alt"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href="https://www.facebook.com/jordan.n.pastor"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="https://github.com/Nguyen-Jordan"><i class="fa-brands fa-github-alt"></i></a>
+        <a href="www.linkedin.com/in/nguyen-jordan"><i class="fa-brands fa-linkedin-in"></i></a>
       </div>
     </div>
   </section>
@@ -436,9 +436,9 @@
       <i class="fa-solid fa-angles-up"></i>
     </a>
     <div class="social-media">
-      <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-      <a href="#"><i class="fa-brands fa-github-alt"></i></a>
-      <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+      <a href="https://www.facebook.com/jordan.n.pastor"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="https://github.com/Nguyen-Jordan"><i class="fa-brands fa-github-alt"></i></a>
+      <a href="www.linkedin.com/in/nguyen-jordan"><i class="fa-brands fa-linkedin-in"></i></a>
     </div>
   </footer>
 
