modify aboutme text

--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
       <div class="subheadline">Hello! It's nice to see you here!</div>
       <h2>A propos de moi</h2>
       <p><span>Je suis développeur web Full-Stack et j'aime ça</span><br>
-        Né à Marseille et élevé à Madrid,
-        suite à une reconversion professionnelle, je suis récemment diplômé en tant que développeur Web et web mobile.
-        Depuis, je conçois et développe des sites web en perfectionnant mes compétences pour me tenir au courant de
-        l'évolution rapide de l'industrie du web.</p>
+        Je suis né à Marseille et j'ai grandi à Madrid.
+        Je suis récemment diplômé en tant que développeur Web et web mobile suite à une reconversion professionnelle.
+        Grâce à ma formation j'ai acquis de nombreuses compétences et connaissances grâce à des projets réalisés dans
+        différents langages de programmation.
+        </p>
       <div class="fil">
         <div class="col">
           <h3>Données personnelles</h3>
