--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <div class="content-section">
       <div class="subheadline">Hello! It's nice to see you here!</div>
       <h2>A propos de moi</h2>
-      <p><span>Je suis développeur web Full-Stack et j'aime ça</span><br>
-        Je suis né à Marseille et j'ai grandi à Madrid.
-        Je suis récemment diplômé en tant que développeur Web et web mobile suite à une reconversion professionnelle.
-        Grâce à ma formation j'ai acquis de nombreuses compétences et connaissances grâce à des projets réalisés dans
+      <p><span>Je suis développeur web Full-Stack et j'aime ça!</span><br>
+        Je suis né à Marseille et j'ai grandi à Madrid. <br>
+        Récemment diplômé en tant que développeur Web et web mobile suite à une reconversion professionnelle. <br>
+        Lors de ma formation j'ai acquis de nombreuses compétences et connaissances grâce à des projets réalisés dans
         différents langages de programmation.
         </p>
       <div class="fil">
@@ -81,7 +81,7 @@
               <strong>Langue</strong>
               <span>Français</span> Bilingue
               <span>Espagnole</span> Bilingue
-              <span>Anglais</span> B1
+              <span>Anglais</span> B2
             </li>
           </ul>
         </div>
@@ -295,7 +295,7 @@
       <h2>CV</h2>
       <div class="fil">
         <div class="col left">
-          <h3>Diplôme et formations</h3>
+          <h3>Formation</h3>
           <div class="item lef">
             <h4>BTS Développeur Web et Web mobile</h4>
             <span class="home">Studi</span><p> Paris</p>
@@ -314,7 +314,7 @@
           </div>
         </div>
         <div class="col right">
-          <h3>Experience Professionnel</h3>
+          <h3>Experiences Professionnelles</h3>
           <div class="item rig">
             <h4>Glacier</h4>
             <span class="home">Palais des glaces</span><p> Annecy</p>
