add link le-secret

--- a/index.html
+++ b/index.html
@@ -372,10 +372,12 @@
         </div>
         <div class="project">
           <img src="public/img/Le_secret.png" alt="Restaurant Le Secret">
-          <div class="overlay">
-            <h3>Site statique <br> Restaurant Le Secret</h3>
-            <p>HTML,CSS & JS</p>
-          </div>
+          <a href="https://le-secret-restautant.nguyenjordan.fr/">
+            <div class="overlay">
+              <h3>Site statique <br> Restaurant Le Secret</h3>
+              <p>HTML,CSS & JS</p>
+            </div>
+          </a>
         </div>
         <div class="project">
           <img src="public/img/MLD_cinema.png" alt="Base de données Salle de Cinéma">
