change name skills

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href="#index" onclick="select()">Accueil</a></li>
           <li><a href="#aboutme" onclick="select()">A propos</a></li>
-          <li><a href="#skills" onclick="select()">Compétences</a></li>
+          <li><a href="#skills" onclick="select()">Skills</a></li>
           <li><a href="#cv" onclick="select()">CV</a></li>
           <li><a href="#portfolio" onclick="select()">Portfolio</a></li>
           <li><a href="#contact" onclick="select()">Contact</a></li>
@@ -133,7 +133,7 @@
   <!-- Section Skills -->
   <section id="skills" class="skills">
     <div class="content-section">
-      <h2>COMPETENCES</h2>
+      <h2>SKILLS</h2>
       <div class="fil">
         <div class="col">
           <h3>Compétences techniques</h3>
